# DoubleCherryRED

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/cores/GB/TGBDual/: TGBDualCore.hpp  TGBDualRenderer.hpp  dmy_renderer.h  gb.h  serializer.h
src/: libretro.cpp
src/cores/GB/: TGBDualCore.cpp
src/cores/GB/TGBDual/: TGBDualRenderer.cpp  apu.cpp  cheat.cpp  cpu.cpp  dmy_renderer.cpp  gb.cpp  lcd.cpp  mbc.cpp  rom.cpp
src/cores/GB/common/infrared/: full_changer.cpp  tv_remote.cpp
src/cores/GB/common/infrared/include/: full_changer.hpp  pikachu_2_gs.hpp  tv_remote.hpp  ubikey_unlocker.hpp
src/cores/GB/common/linkcable/: alleyway_link_controller.cpp  barcode_taisen_bardigun.cpp  dmg07.cpp  hack_4p_burger_time_deluxe.cpp  hack_4p_tetris.cpp
src/cores/GB/common/linkcable/include/: alleyway_link_controller.hpp  barcode_taisen_bardigun.hpp  barcodeboy.hpp  dmg07.hpp  faceball2000_cable.hpp  game_and_watch_gallery_unlocker.hpp  gameboy_printer.hpp  hack_4p_kwirk.hpp  link_master_device.hpp  linkcable_hub.hpp  pokebuddy_gen1.hpp  power_antenna.hpp
src/cores/GB/libgambatte/include/: gambatte.h  linkcable.h
src/cores/GB/libgambatte/libretro/: gbcpalettes.h  libretro.cpp  local_serial.cpp  local_serial.h
src/cores/GB/libgambatte/libretro/inline/: audio_resample_inline.h  helper_inline.h  interframe_blending_inline.h  palette_switching_inline.h  rubmble_support_inline.h
src/cores/GB/libgambatte/src/: cpu.h  gambatte-memory.cpp  gambatte-memory.h  gambatte.cpp  serial_io.h
src/libretro/: callbacks.h  cheats.h
